@@ -165,7 +165,8 @@
         <configuration>
           <source>15</source>
           <target>15</target>
-        </configuration>
+					<compilerArgs>--enable-preview</compilerArgs>
+				</configuration>
       </plugin>
 			<plugin>
 				<groupId>org.liquibase</groupId>
@@ -177,6 +178,18 @@
 					<username>root</username>
 					<password>root</password>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.coveo</groupId>
+				<artifactId>fmt-maven-plugin</artifactId>
+				<version>2.10</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>format</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
